# coldoc_tasks

./: .gitmodules  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-frozen.txt  requirements-test.txt  requirements.txt  setup.cfg  tox.ini
.githooks/: pre-commit
.github/workflows/: python-package.yml  test.yaml
coldoc_tasks/: apps.py  celery_tasks.py  coldoc_tasks.py  coldoc_tasks_cli.py  exceptions.py  multiproc_tasks.py  simple_tasks.py  task_utils.py  wrap_lockfile.py
coldoc_tasks/management/commands/: coldoc_tasks.py
django_test/: manage.py
django_test/django_test/: settings.py  urls.py  wsgi.py
django_test/my_app/: models.py  views.py
django_test/my_app/migrations/: 0001_initial.py
etc/: celeryconfig.py
unittests/: fakejobs.py  test_celery_daemon.py  test_daemon.py  test_django_daemon.py  test_fork.py  test_multiproc_tasks.py  test_utils.py
