[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coldoc_tasks"
version = "0.2"
authors = [
  { name="Andrea C. G. Mennucci", email="mennucc1@debian.org" },
]
description = "ColDoc Task Server"
readme = "README.rst"
requires-python = ">=3.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD-3-Clause",
    "Operating System :: OS Independent",
]
dependencies = [
    "plain-config @ git+https://github.com/mennucc/plain-config.git",
]

[project.urls]
"Homepage" = "https://github.com/mennucc/coldoc_tasks"
"Bug Tracker" = "https://github.com/mennucc/coldoc_tasks/issues"
