[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coldoc_tasks"
version = "0.2"
authors = [
  { name="Andrea C. G. Mennucci", email="mennucc1@debian.org" },
]
description = "ColDoc Task Server"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "plain-config @ git+https://github.com/mennucc/plain-config.git",
]

[project.urls]
"Homepage" = "https://github.com/mennucc/coldoc_tasks"
"Bug Tracker" = "https://github.com/mennucc/coldoc_tasks/issues"

[project.scripts]
coldoc_tasks_cli = "coldoc_tasks.coldoc_tasks_cli:main"
