[metadata]
name = coldoc_tasks
description = ColDoc Task server
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.2
author = Andrea C. G. Mennucci
author_email = mennucc1@debian.org
url = https://github.com/mennucc/coldoc_tasks
classifiers=
  Programming Language :: Python :: 3
  License :: OSI Approved :: BSD-3-Clause
  Operating System :: OS Independent

[options]
python_requires= >=3.6
packages =
  coldoc_tasks
  coldoc_tasks/management
  coldoc_tasks/management/commands/
include_package_data = True
install_requires =

[options.package_data]

[options.entry_points]
console_scripts = 
  coldoc_tasks_cli = coldoc_tasks.coldoc_tasks_cli:main
